testsuite/tests/parser/should_fail/readFail047.hs

module ShouldFail where

foo = let
    x = (1, 2
    y = 3
  in
  fst x + y

